--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
         </div>
       </section>
       <!-- meet our super client -->
-       <section class="container grid grid-cols-1 text-center gap-[20px] mx-auto pl-[15px] md:grid-cols-1 lg:grid-cols-2 md:text-start sm:pl-[70px] mx-auto gap-[50px] mb-[100px] bg-linear-to-r from-[#FF8938] to-[#FF0000] max-w-[1340px] rounded-[10px] md:px-[70px] relative">
-        <div class="flex flex-col sm:items-center md:items-start md:relative py-[155px] space-y-[25px] md:max-w-[440px] ml-[48px]">
+       <section class="container grid grid-cols-1 text-center pl-[15px] md:grid-cols-1 lg:grid-cols-2 md:text-start  mx-auto gap-[50px] mb-[100px] bg-linear-to-r from-[#FF8938] to-[#FF0000] max-w-[1340px] rounded-[10px] md:px-[70px] relative">
+        <div class="flex flex-col sm:items-center md:items-start md:relative py-[155px] space-y-[25px] md:max-w-[440px] ml:[0px] md:ml-[48px]">
             <h2 class="font-extrabold text-[45px] text-[#F4F4F4]">Meet Our Super Clients</h2>
             <p class="text-[16px] font-medium text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             <button class="bg-[#FFFFFF] px-[28px] py-[14px] rounded-[5px] text-[20px] font-bold cursor-pointer"><span class="bg-linear-to-r from-[#FF8938] to-[#FF0000] bg-clip-text text-transparent">Show All</span></button>
             <span class="absolute left-[80px] bottom-0"><img src="images/bg_cup.png" alt=""></span>
         </div>
 
-        <div class="relative py-[100px] space-y-[40px] ml-[100px]">
-                 <div class="absolute top-[300px] left-[10px] w-[90%] max-w-[320px] md: bg-white rounded-[5px] p-[45px] max-w-[433px] absolute md:top-[230px] md:left-[-130px] z-20">
+        <div class="relative py-[100px] space-y-[40px] ml-[0px] md:ml-[100px]">
+                 <div class="absolute top-[300px] left-[10px] md:w-[90%]  md: bg-white rounded-[5px] p-[45px] md:max-w-[433px] absolute md:top-[230px] md:left-[-130px] z-20">
                 <p class="text-[#777777] mb-[20px]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                 <h2 class="font-bold text-[#1C1C1C]">Shahadot Hossain Sifat</h2>
                 <p class="font-medium text-[#5D5A6F]">Businessman</p>
