add a font size

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         
         <div class=" space-y-[20px]">
-            <h2 class="text-[24px] font-bold md:font-extrabold text-[45px] text-[#1C1C1C]">Great Tea, Freshly <br> Presented</h2>
+            <h2 class="text-[24px] font-bold md:font-extrabold md:text-[45px] text-[#1C1C1C]">Great Tea, Freshly <br> Presented</h2>
             <p class="text-[16px] font-medium text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
             <h2 class="text-[20px] font-extrabold text-[#1C1C1C]">Unique Taste</h2>
             <p class="text-[16px] font-medium text-[#777777]">A Unique and different style from other teapots gives a <br> luxurious and minimalist impression</p>
