add heading size

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- banner section -->
     <section class="grid grid-cols-1 text-center md:grid-cols-2 container mx-auto px-[100px]">
         <div class="text-center sm:banner-left space-y-[30px] text-start">
-            <h2 class="text-[55px] md:text-[80px] font-extrabold">
+            <h2 class="text-[40px] md:text-[80px] md:font-extrabold">
                 It's good <br>
                 tea time at The <br> Tea House
             </h2>
