--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       </section>
       <!-- meet our super client -->
-       <section class="container grid grid-cols-1 text-center pl-[15px] md:grid-cols-1 lg:grid-cols-2 md:text-start  mx-auto gap-[50px] mb-[100px] bg-linear-to-r from-[#FF8938] to-[#FF0000] max-w-[1340px] rounded-[10px] md:px-[70px] relative">
+       <section class="container grid grid-cols-1 text-center px-[20px] md:grid-cols-1 lg:grid-cols-2 md:text-start  mx-auto gap-[50px] mb-[100px] bg-linear-to-r from-[#FF8938] to-[#FF0000] max-w-[1340px] rounded-[10px] md:px-[70px] relative">
         <div class="flex flex-col sm:items-center md:items-start md:relative py-[155px] space-y-[25px] md:max-w-[440px] ml:[0px] md:ml-[48px]">
             <h2 class="font-extrabold text-[45px] text-[#F4F4F4]">Meet Our Super Clients</h2>
             <p class="text-[16px] font-medium text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
