add icon center

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <input class="outline-none border-b-2 pb-3 w-[120px] md:w-[250px]" type="text" name="" id="" placeholder="Email address">
                             <a class="" href=""><button class=" text-white font-bold h-[32px] w-[32px] bg-amber-600 rounded-[5px] bg-linear-to-r from-[#FF8938] to-[#FF0000] cursor-pointer rounded-full"><span><i class="fa-solid fa-chevron-right"></i></span></button></a>
                         </div>
-                        <div class="flex gap-[20px]">
+                        <div class="justify-center gap-[20px] md:flex md:justify-start md:gap-[20px]">
                             <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                             <a href=""><i class="fa-brands fa-twitter"></i></a>
                             <a href=""><i class="fa-brands fa-instagram"></i></a>
